--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Can you briefly explain your favorite episode in the Hudson and Rex show?
 </form></div> </div>
 
 
-<a href="https://celebrity-org.github.io/Home.TomJones.com/">
+<a href="https://celebrities-org.github.io/Home.HudsonAndRex.com/">
 
 <button type="button" class="green-button" style="display: block; width: 100%; height: 47px; background-color: #2F539B; color: white; font-size: 22px; font-weight: bold; border: none; border-radius: 50px; cursor: pointer;">CONTINUE</button>
 
